# python--

./: CMakeLists.txt  README.md  checks.cpp  checks.hpp  console.cpp  console.hpp  exceptions.cpp  functionStack.cpp  functionStack.hpp  interpreter.cpp  interpreter.hpp  main.cpp  parseOperators.cpp  parseStructs.cpp  parseStructs.hpp  parseVariables.cpp  parsing.cpp  parsing.hpp  variables.cpp  variables.hpp
content/: defines.hpp  function.cpp  function.hpp  variables.cpp  variables.hpp
content/pmmstdlib/: fileAccess.cpp  input.cpp  math.cpp  pmmstdlib.cpp  pmmstdlib.hpp  printing.cpp  systemThings.cpp
examples/: arrays.p--  bigger.p--  chat.p--  fileReading.p--  output.p--  pmmTest.p--
interpretation/: InterpreterInterface.cpp  InterpreterInterface.hpp  checks.cpp  checks.hpp  exceptions.cpp  exceptions.hpp  functionStack.cpp  functionStack.hpp  interpreter.cpp  interpreter.hpp  interpreterInterface.cpp  interpreterInterface.hpp  runtime.cpp  runtime.hpp
parseStructDefinitions/: parseCompare.cpp  parseEquation.cpp  parseFunction.cpp  parseImplicit.cpp  parseLogics.cpp  parseMathematicalOperation.cpp  parseOperators.cpp  parseStructs.cpp  parseStructs.hpp  parseVariables.cpp
